Simplifying code, avoiding check for PHP version

--- a/web/templates/admin/add_web.html
+++ b/web/templates/admin/add_web.html
@@ -253,7 +253,7 @@
                         </tr>
                         <tr>
                             <td class="vst-text step-top">
-                                <label><input type="checkbox" size="20" class="vst-checkbox" name="v_ftp" <?php if (!empty($v_ftp) && (version_compare(PHP_VERSION, '5.6', '==') ? count($v_ftp_users) : (is_array($v_ftp_users) && count($v_ftp_users)))) echo "checked=yes" ?> onclick="App.Actions.WEB.toggle_additional_ftp_accounts(this)"> <?php print __('Additional FTP Account');?></label>
+                                <label><input type="checkbox" size="20" class="vst-checkbox" name="v_ftp" <?php if (!empty($v_ftp) && (is_array($v_ftp_users) && count($v_ftp_users))) echo "checked=yes" ?> onclick="App.Actions.WEB.toggle_additional_ftp_accounts(this)"> <?php print __('Additional FTP Account');?></label>
                             </td>
                         </tr>
                         <tr>
