--- a/web/templates/user/list_stats.html
+++ b/web/templates/user/list_stats.html
@@ -77,7 +77,7 @@
         <!-- /.l-unit__col -->
         <div class="l-unit__col l-unit__col--right">
           <div class="l-unit__name separate">
-            <?php if (version_compare(PHP_VERSION, '5.6', '==')) { echo __(strftime("%b", strtotime($key))).strftime(" %Y", strtotime($key)); } else { echo __(date('M', strtotime($key))).date(' Y', strtotime($key)); } ?>
+            <?php echo __(date('M', strtotime($key))).date(' Y', strtotime($key)); ?>
           </div>
 
 
