--- a/web/templates/admin/list_web.html
+++ b/web/templates/admin/list_web.html
@@ -51,7 +51,9 @@
     <!-- /.l-separator -->
 
 
-
+<script>
+  var dataset_values = [];
+ </script>
 
 
 
@@ -116,6 +118,22 @@
                             $proxy_ext = str_replace(',', ', ', $data[$key]['PROXY_EXT']);
                         }
                     ?>
+      <script>
+        dataset_values[<?=$i?>] = {
+          'object': 'web',
+          'action': 'manage',
+          'subaction': '',
+          'step': '1',
+          'title': '<?=$key?>',
+          'domain': '<?=$key?>',
+          'web_template': '<?=$data[$key]['TPL']?>',
+          'proxy_template': '<?=$data[$key]['PROXY']?>',
+          'backend_template': '<?=$data[$key]['BACKEND']?>',
+          'ssl_support': '<?=$data[$key]['SSL']?>',
+          'letsencrypt_support': '<?=$data[$key]['LETSENCRYPT']?>',
+          'ip': '<?=$data[$key]['IP']?>'
+        };
+      </script>
 
       <div class="l-unit <? if($data[$key]['SUSPENDED'] == 'yes') echo 'l-unit--suspended'; if($_SESSION['favourites']['WEB'][$key] == 1) echo ' l-unit--starred'; ?>" v_section="web" v_unit_id="<?=$key?>"
 id="web-unit-<?=$i?>"  sort-ip="<?=str_replace('.', '', $data[$key]['IP'])?>"
@@ -154,7 +172,7 @@ sort-name="<?=$key?>"  sort-bandwidth="<?=$data[$key]['U_BANDWIDTH']?>" sort-dis
                 </a>
                 <span class="shortcut delete">&nbsp;Del</span>
               </div>
-
+              <div class="actions-panel__col actions-panel__logs" style="background-color: #c6d6d9;"><a href="javascript:void(0)" onclick="more_button_click(<?=$i?>)"><?=__('More')?> <i></i></a><span class="shortcut more">&nbsp;&#8629;</span></div>
             </div>
             <!-- /.actiona-panel -->
           </div>
