--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -42,9 +42,18 @@
     GLOBAL.CURRENT_USER_LOOK = '<?=$_SESSION['look']?>';
     GLOBAL.CURRENT_USER_FINAL = '<?=$GLOBALS['CURRENT_USER_FINAL']?>';
     GLOBAL.AJAX_URL = '';
+    GLOBAL.TOKEN = '<?=$_SESSION['token']?>';
   </script>
   <style>
     .l-content .l-center {margin-right: <?=$content_margin_right?>px}
   </style>
 </head>
 <body class="body-<?=strtolower($TAB)?> lang-<?=$_SESSION['language']?>">
+
+  <div id="floating-center-div" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 50vw; max-width: 700px; background: #fff; z-index: 9999; box-shadow: 0 4px 32px rgba(0,0,0,0.6); border-radius: 8px; padding: 32px 24px; display: none;">
+    <div id="floating-center-div-right-close" style="position: absolute; top: 10px; right: 10px; cursor: pointer; color: #999;">
+      <i class="fas fa-times"></i>
+    </div>
+    <h1 id="floating-center-div-title" style="margin-top: 0;"></h1>
+    <div id="floating-center-div-content"></div>
+  </div>
