--- a/web/templates/scripts.html
+++ b/web/templates/scripts.html
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="/js/jquery.finder.js?<?=JS_LATEST_UPDATE?>"></script>
   <script type="text/javascript" src="/js/fix.js?v=<?=JS_LATEST_UPDATE?>"></script>
   <script type="text/javascript" src="/js/floating-div.js?<?=JS_LATEST_UPDATE?>"></script>
+  <script type="text/javascript" src="/js/confirm-div.js?<?=JS_LATEST_UPDATE?>"></script>
   <script>
     hover_menu = function() {}
     $(function() {
